Fix type button going full width and modal ribbon going too high on mobile

--- a/src/components/Modal/ModalInfoItem.scss
+++ b/src/components/Modal/ModalInfoItem.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  align-items: flex-start;
   text-align: left;
   margin-right: 1vw;
 
